Final details and comments

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -65,10 +65,12 @@ stepsPerInterval$time <- strptime(stepsPerInterval$interval, "%H:%M")
 maxPerDay <- max(stepsPerInterval$steps, na.rm=TRUE)
 maxTime <- stepsPerInterval$time[stepsPerInterval$steps == maxPerDay]
 #Make plot steps vs. time
-with(stepsPerInterval, plot(time, steps, type="l", xlab="Hour", ylab="Mean number of steps", main="Activity during day"))
+with(stepsPerInterval, plot(time, steps, type="l", xlab="Hour", ylab="Mean number of steps", main="Activity during day", xaxt="n"))
+tickMarks = as.POSIXct(as.character(seq(0, 24, by=2)), format="%H")
+axis.POSIXct(1, at = tickMarks)
 ```
 
-**In average, the time with more activity along the day, is  `r maxTime$hour`:`r maxTime$min` hs.**
+**In average, the time interval with more activity along the day is from `r maxTime$hour`:`r maxTime$min` hs to `r maxTime$hour`:`r (maxTime$min + 5) %% 60` hs.**
 
 ## Imputing missing values
 Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
@@ -90,12 +92,18 @@ newActivity <- activity
 #Imputation strategy: 
 #For each NA record, take the mean of every data with the same date, and the mean of every data with the same interval (time of the day) and take the average of both means. If every information for date is absent, imput the mean of the time of day.
 for(i in 1:nrow(newActivity)){
+  #For every NA data...
   if(newActivity$isNA[i]){
+    #1) found mean per interval (time of the day)
     meanPerInterval <- stepsPerInterval$steps[stepsPerInterval$interval == newActivity$interval[i]]
+    #2) If there's data for the date, ...
     if(activity$date[i] %in% stepsPerDate$date){
+      #... found mean per date and average both means; ...
       meanPerDate <- stepsPerDate$steps[stepsPerDate$date == activity$date[i]]
       newActivity$steps[i] <- (meanPerDate + meanPerInterval) / 2}
+    #... if there's not data for the date
       else{
+        #... just take mean per interval
         newActivity$steps[i] <- meanPerInterval}}}
 #Now with the new data, repeat the first chunk
 stepsPerDate <- aggregate(steps ~ date, newActivity, sum, na.rm=T)
@@ -110,11 +118,13 @@ abline(v = meanStepsPerDay, col = "blue", lw = 2)
 
 **Originally there was `r numberOfNAs` missing data.**
 
+Missing data were imputated averaging the mean of every data in the selected time interval and the mean of every data in the selected date (if available).
+
 **The mean, having imputed data, is `r format(meanStepsPerDay, scientific=F)` steps per day.**
 
 **The median, having imputed data, is `r format(medianStepsPerDay, scientific=F)` steps per day.**
 
-The differences with respect to non-imputed data are imperceptible.
+The differences with respect to non-imputed data (above) are negligible.
 
 ## Are there differences in activity patterns between weekdays and weekends?
 For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
@@ -141,9 +151,12 @@ stepsPerInterval <- aggregate(steps ~ interval + kindOfDay, newActivity, mean, n
 #Create a variable time (character variable don't allow ploting)
 stepsPerInterval$time <- strptime(stepsPerInterval$interval, "%H:%M")
 #Make two plots steps vs. time, by kindOfDay
+tickMarks = as.POSIXct(as.character(seq(0, 24, by=4)), format="%H")
 par(mfrow=c(1, 2))
-with(stepsPerInterval[stepsPerInterval$kindOfDay == "weekday",], plot(time, steps, type="l", xlab="Hour", ylab="Mean number of steps", ylim=c(0, 240), main="Weekdays"))
-with(stepsPerInterval[stepsPerInterval$kindOfDay == "weekend",], plot(time, steps, type="l", xlab="Hour", ylab="Mean number of steps", ylim=c(0, 240), main="Weekends"))
+with(stepsPerInterval[stepsPerInterval$kindOfDay == "weekday",], plot(time, steps, type="l", xlab="Hour", ylab="Mean number of steps", ylim=c(0, 240), main="Weekdays", xaxt="n"))
+axis.POSIXct(1, at=tickMarks)
+with(stepsPerInterval[stepsPerInterval$kindOfDay == "weekend",], plot(time, steps, type="l", xlab="Hour", ylab="Mean number of steps", ylim=c(0, 240), main="Weekends", xaxt="n"))
+axis.POSIXct(1, at=tickMarks)
 ```
 
-The maximum level of activity during weekends tends to be lesser than the level of activity during weekdays. However, during worktime (9 - 17 hs), the weekends tend to be more active.
+The maximum level of activity during weekends tends to be lesser than the maximum level of activity during weekdays. However, during worktime (9 - 17 hs), the weekends tend to be more active.
